--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
+    <div id="score" class="hidden">Score</div>
     <script src="main.js"></script>
   </body>
 </html>
