Repositioned the score to top right. #14

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <title>Driving Game</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
-    <div id="score" class="hidden">Score</div>
+    <div id="score" class="hidden">Score:<span id="banana-count"></span></div>
     <script src="main.js"></script>
   </body>
 </html>
