--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
-    <div id="score" class="hidden">Score:<span id="banana-count"></span></div>
+    <div id="score">Score: <span id="banana-count"></span></div>
     <script src="main.js"></script>
   </body>
 </html>
