--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Driving Game</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Oswald" rel="stylesheet"/>
   </head>
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
