--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
     <div id="score">Score: <span id="banana-count"></span></div>
+    <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
+    <audio id="game-over-audio" src="audio/game-over.mp3"></audio>
     <script src="main.js"></script>
   </body>
 </html>
