Added icon for sound on and off. #25

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
+    <img id="sound" src="images/sound-on.png"/>
     <div id="score">Score: <span id="banana-count"></span></div>
     <audio id="main-menu-audio" src="audio/main-menu.mp3" loop></audio>
     <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
