--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="400"></canvas>
-    <img id="sound" src="images/sound-on.png"/>
+    <a href="#"><img id="mute" src="images/sound-on.png"/></a>
     <div id="score">Score: <span id="banana-count"></span></div>
     <audio id="main-menu-audio" src="audio/main-menu.mp3" loop></audio>
     <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
