--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,15 @@
     <canvas id="canvas" width="600" height="400"></canvas>
     <a href="#"><img id="mute" src="images/sound-on.png"/></a>
     <div id="score">Score: <span id="banana-count"></span></div>
+    <form id="send-score" class="hidden">
+      Name: <input id="username" type="text" name="name"/>
+      <button type="submit" name="send-score">Enter</button>
+    </form>
+
     <audio id="main-menu-audio" src="audio/main-menu.mp3" loop></audio>
     <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
     <audio id="game-over-audio" src="audio/game-over.mp3"></audio>
     <script src="main.js"></script>
+    <script src="high-scores.js"></script>
   </body>
 </html>
