Created screen that allows user to enter name. #27

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <a href="#"><img id="mute" src="images/sound-on.png"/></a>
     <div id="score">Score: <span id="banana-count"></span></div>
     <form id="send-score" class="hidden">
-      Name: <input id="username" type="text" name="name"/>
+      <input id="username" type="text" name="name"/>
       <button type="submit" name="send-score">Enter</button>
     </form>
 
