The name input is automatically selected when game ends. #27

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,12 @@
     <a href="#"><img id="mute" src="images/sound-on.png"/></a>
     <div id="score">Score: <span id="banana-count"></span></div>
     <form id="send-score" class="hidden">
-      <input id="username" type="text" name="name"/>
-      <button type="submit" name="send-score">Enter</button>
+      <input id="username" type="text" name="name" placeholder="AAA" maxlength="3"/>
     </form>
 
     <audio id="main-menu-audio" src="audio/main-menu.mp3" loop></audio>
     <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
     <audio id="game-over-audio" src="audio/game-over.mp3"></audio>
     <script src="main.js"></script>
-    <script src="high-scores.js"></script>
   </body>
 </html>
