Added CSS styles. #27

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <canvas id="canvas" width="600" height="400"></canvas>
     <a href="#"><img id="mute" src="images/sound-on.png"/></a>
     <div id="score">Score: <span id="banana-count"></span></div>
-    <form id="send-score" class="hidden">
+    <div id="send-score" class="hidden">
       <input id="username" type="text" name="name" placeholder="AAA" maxlength="3"/>
-    </form>
+    </div>
 
     <audio id="main-menu-audio" src="audio/main-menu.mp3" loop></audio>
     <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
