--- a/public/index.html
+++ b/public/index.html
@@ -13,51 +13,9 @@
     <div id="send-score" class="hidden">
       <input id="username" type="text" name="name" placeholder="AAA" maxlength="3"/>
     </div>
-    <div id="leaderboard">
-      <table id="top5">
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-      </table>
-      <table id="next5">
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>AAA</td>
-          <td>20</td>
-        </tr>
-      </table>
+    <div id="leaderboard" class="hidden">
+      <table id="top5"></table>
+      <table id="next5"></table>
     </div>
     <audio id="main-menu-audio" src="audio/main-menu.mp3" loop></audio>
     <audio id="game-audio" src="audio/mario-kart.mp3" loop></audio>
