--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div id="send-score" class="hidden">
       <input id="username" type="text" name="name" placeholder="AAA" maxlength="3"/>
     </div>
-    <div id="leaderboard" class="hidden">
+    <div id="leaderboard" class="hidden flex">
       <table id="top5"></table>
       <table id="next5"></table>
     </div>
